<resources>
    <string name="app_name">Expence Tracker</string>
    <string name="login">Login</string>
    <string name="belummemilikiakun">Belum memiliki akun?</string>
    <string name="registrasi">Registrasi</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Re-password</string>
    <string name="fullname">Nama Lengkap</string>

    <string name="pengeluaran">Pengeluaran</string>
    <string name="saldo">Saldo</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="transaksi">Transaksi</string>
    <string name="hapus">Hapus</string>
    <string name="kembali">Kembali</string>
    <string name="jumpengeluaran">Jumlah Pengeluaran</string>
    <string name="jumpemasukan">Jumlah Pemasukan</string>
    <string name="jumtransaksi">Jumlah Transaksi</string>

    <string name="deskripsi">Deskripsi</string>
    <string name="kategori">Kategori</string>
    <string name="tambah">Tambah</string>

    <string name="date">Tanggal</string>
    <string name="tahun">Tahun</string>
    <string name="bulan">Bulan</string>
    <string name="cek">Cek</string>

    <string name="total">Total</string>
    <string name="batas">Batas</string>
    <string name="detail">Detail</string>

    <string name="setting">Pengaturan</string>
    <string name="simpan">Simpan</string>
    <string name="format01">11.111,00</string>
    <string name="format02">11,111.00</string>
    <string name="matauang">Mata Uang : </string>
    <string name="format_mata_uang">Format Mata Uang : </string>
    <string name="bahasa">Bahasa : </string>
    <string name="buat_atau_ubah_alokasi">Buat atau Ubah Alokasi</string>
    <string name="logout">Logout</string>

    <string name="tambah_dan_buat_Alokasi">Tambah dan Buat Alokasi</string>

    <string name="alokasi">Alokasi</string>
    <string name="ubah">Ubah</string>
    <string name="user_not_approved">Your email or password is not valid</string>
</resources>
