<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.gisela.praktikum01.UbahTambahAlokasi">

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/alokasi"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kategori" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alokasi"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnRegistrasi4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:text="@string/tambah"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="431dp" />
</LinearLayout>
