<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gisela.praktikum01.addOutcome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/top_border"
                android:background="@android:color/holo_orange_dark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_title"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/margin_title"
                    android:layout_weight="7"
                    android:text="@string/pengeluaran"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/font_title"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/cardview_shadow_end_color"
                    android:contentDescription="@string/hapus"
                    app:srcCompat="@android:drawable/ic_menu_delete" />

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/cardview_shadow_end_color"
                    android:contentDescription="@string/kembali"
                    app:srcCompat="@android:drawable/ic_menu_revert" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pengeluaran" />

                <EditText
                    android:id="@+id/txtPengeluaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pengeluaran"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kategori" />

                <Spinner
                    android:id="@+id/cmbKategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi" />

                <EditText
                    android:id="@+id/txtDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/deskripsi"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/btnTambahPengeluaran"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/tambah"
                    tools:layout_editor_absoluteX="133dp"
                    tools:layout_editor_absoluteY="431dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
